<resources>
    <string name="app_name">Energize</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="Solar_Question_1">1. What\'s the main source of Solar Energy?</string>
    <string name="Solar_Question_2">2. A _______ is used to harvest Solar Energy.</string>
    <string name="Solar_Question_3">3. What country harvest the most Solar Energy?</string>
    <string name="Solar_Question_4">4. Can you harvest Solar Energy at night?</string>
    <string name="Solar_Question_5">5. When was Solar Energy discovered?</string>
    <string name="Solar_Question_6">6. Is Solar Energy eco friendly?</string>
    <string name="Solar_Question_7">7. What is Photovoltaics?</string>
    <string name="Solar_Question_8">8. Is Solar Power considered a renewable energy?</string>
    <string name="Solar_Question_9">9. Solar Energy can be used to generate heat or ______.</string>
    <string name="Solar_Question_10">10. What particles from the sun help to generate power from solar cells?</string>
    <string name="Solar_Answer_Q1_1">A. Humidity</string>
    <string name="Solar_Answer_Q1_2">B. Water</string>
    <string name="Solar_Answer_Q1_3">C. Sun Rays</string>
    <string name="Solar_Answer_Q1_4">D. Heat</string>
    <string name="Solar_Answer_Q2_1">A. Thermometer</string>
    <string name="Solar_Answer_Q2_2">B. Solar Panel</string>
    <string name="Solar_Answer_Q2_3">C. Solar Cup</string>
    <string name="Solar_Answer_Q2_4">D. Barometer</string>
    <string name="Solar_Answer_Q3_1">A. USA</string>
    <string name="Solar_Answer_Q3_2">B. Britain</string>
    <string name="Solar_Answer_Q3_3">C. China</string>
    <string name="Solar_Answer_Q3_4">D. South Korea</string>
    <string name="Solar_Answer_Q4_1">A.Yes</string>
    <string name="Solar_Answer_Q4_2">B. No</string>
    <string name="Solar_Answer_Q4_3">C. Maybe</string>
    <string name="Solar_Answer_Q4_4">D. I\'m not sure</string>
    <string name="Solar_Answer_Q5_1">A. 1930</string>
    <string name="Solar_Answer_Q5_2">B. 1864</string>
    <string name="Solar_Answer_Q5_3">C. 1758</string>
    <string name="Solar_Answer_Q5_4">D. 1839</string>
    <string name="Solar_Answer_Q6_1">A. Yes</string>
    <string name="Solar_Answer_Q6_2">B. No</string>
    <string name="Solar_Answer_Q6_3">C. Maybe</string>
    <string name="Solar_Answer_Q6_4">D. I\'m not sure</string>
    <string name="Solar_Answer_Q7_1">A. It is the conversion of wind into electricity.</string>
    <string name="Solar_Answer_Q7_2">B. It is the use of geothermal energy.</string>
    <string name="Solar_Answer_Q7_3">C. It is the direct conversion of light into electricity at the atomic level.</string>
    <string name="Solar_Answer_Q7_4">D. It is the burning of fossil fuels to create electricity.</string>
    <string name="Solar_Answer_Q8_1">A. Yes</string>
    <string name="Solar_Answer_Q8_2">B. No</string>
    <string name="Solar_Answer_Q8_3">C. Maybe</string>
    <string name="Solar_Answer_Q8_4">D. I\'m not sure</string>
    <string name="Solar_Answer_Q9_1">A. Gas</string>
    <string name="Solar_Answer_Q9_2">B. Water</string>
    <string name="Solar_Answer_Q9_3">C. Electricity</string>
    <string name="Solar_Answer_Q9_4">D. Light</string>
    <string name="Solar_Answer_Q10_1">A. Electrons</string>
    <string name="Solar_Answer_Q10_2">B. Neutrons</string>
    <string name="Solar_Answer_Q10_3">C. Protons</string>
    <string name="Solar_Answer_Q10_4">D. Photons</string>
    <string name="Hydro_Question_1">1. Low ____ can disrupt power generation.</string>
    <string name="Hydro_Question_2">2. Hydroelectricity\'s puel causes environmental pollution.</string>
    <string name="Hydro_Question_3">3. What kind of energy uses the principle of falling when water flows low?</string>
    <string name="Hydro_Question_4">4. What is not suitable for hydroelectric power plant use?</string>
    <string name="Hydro_Question_5">5. Hydroelectric power plants emit no air pollutants.</string>
    <string name="Hydro_Question_6">6. What is not a place to get hydroelectric energy?</string>
    <string name="Hydro_Question_7">7. Hydroelectric power is transformed into ____ energy.</string>
    <string name="Hydro_Question_8">8. What is rotated by water falling from the top?</string>
    <string name="Hydro_Question_9">9. There is energy using salt from the sea.</string>
    <string name="Hydro_Question_10">10.Which of the following keywords is irrelevant to the dam?</string>
    <string name="Hydro_Answer_Q1_1">A. Chemical fuel</string>
    <string name="Hydro_Answer_Q1_2">B. Precipitation</string>
    <string name="Hydro_Answer_Q1_3">C. Electrical energy</string>
    <string name="Hydro_Answer_Q1_4">D. Solar power</string>
    <string name="Hydro_Answer_Q2_1">A. Yes</string>
    <string name="Hydro_Answer_Q2_2">B. No</string>
    <string name="Hydro_Answer_Q2_3">C. Maybe</string>
    <string name="Hydro_Answer_Q2_4">D. I\'m not sure</string>
    <string name="Hydro_Answer_Q3_1">A. Electric energy</string>
    <string name="Hydro_Answer_Q3_2">B. Wind energy</string>
    <string name="Hydro_Answer_Q3_3">C. Hydro energy</string>
    <string name="Hydro_Answer_Q3_4">D. Nuclear energy</string>
    <string name="Hydro_Answer_Q4_1">A. provides water for citizens.</string>
    <string name="Hydro_Answer_Q4_2">B. prevent natural disasters</string>
    <string name="Hydro_Answer_Q4_3">C. drought can be overcome</string>
    <string name="Hydro_Answer_Q4_4">D. can be used as fuel for cars.</string>
    <string name="Hydro_Answer_Q5_1">A. Yes</string>
    <string name="Hydro_Answer_Q5_2">B. No</string>
    <string name="Hydro_Answer_Q5_3">C. Maybe</string>
    <string name="Hydro_Answer_Q5_4">D. I\'m not sure</string>
    <string name="Hydro_Answer_Q6_1">A. Falls</string>
    <string name="Hydro_Answer_Q6_2">B. Dam</string>
    <string name="Hydro_Answer_Q6_3">C. Swimming pool</string>
    <string name="Hydro_Answer_Q6_4">D. Waves of the sea</string>
    <string name="Hydro_Answer_Q7_1">A. Kinetic</string>
    <string name="Hydro_Answer_Q7_2">B. Heat</string>
    <string name="Hydro_Answer_Q7_3">C. Nuclear</string>
    <string name="Hydro_Answer_Q7_4">D. Light</string>
    <string name="Hydro_Answer_Q8_1">A. water wheel</string>
    <string name="Hydro_Answer_Q8_2">B. Semiconductor</string>
    <string name="Hydro_Answer_Q8_3">C. Turbine</string>
    <string name="Hydro_Answer_Q8_4">D. Steam generator</string>
    <string name="Hydro_Answer_Q9_1">A. Yes</string>
    <string name="Hydro_Answer_Q9_2">B. No</string>
    <string name="Hydro_Answer_Q9_3">C. Maybe</string>
    <string name="Hydro_Answer_Q9_4">D. I\'m not sure</string>
    <string name="Hydro_Answer_Q10_1">A. High Construction Costs</string>
    <string name="Hydro_Answer_Q10_2">B. High co2</string>
    <string name="Hydro_Answer_Q10_3">C. Ecosystem Destruction</string>
    <string name="Hydro_Answer_Q10_4">D. Safety</string>
    <string name="Geothermal_Question_1">1. What type of energy is geothermal energy?</string>
    <string name="Geothermal_Question_2">2. How long does a Geothermal source of energy last?</string>
    <string name="Geothermal_Question_3">3. A ____ is used to extract geothermal energy from under the ground</string>
    <string name="Geothermal_Question_4">4. What part of the Earth is Geothermal energy extracted from?</string>
    <string name="Geothermal_Question_5">5. What type of energy is geothermal energy usually transformed into?</string>
    <string name="Geothermal_Question_6">6. Geothermal energy is a good alternative to?</string>
    <string name="Geothermal_Question_7">7. What is the optimum temperature of water for geothermal energy to be extracted from?</string>
    <string name="Geothermal_Question_8">8. What was the first trace of geothermal use in history?</string>
    <string name="Geothermal_Question_9">9. What does the latine term "Geo" mean?</string>
    <string name="Geothermal_Question_10">10. Geothermal energy produces ____ of the emission that coal produces</string>
    <string name="Geothermal_Answer_Q1_1">A. Electricity</string>
    <string name="Geothermal_Answer_Q1_2">B. Heat</string>
    <string name="Geothermal_Answer_Q1_3">C. Earth</string>
    <string name="Geothermal_Answer_Q1_4">D. Solar</string>
    <string name="Geothermal_Answer_Q2_1">A. 100 years</string>
    <string name="Geothermal_Answer_Q2_2">B. 10 years</string>
    <string name="Geothermal_Answer_Q2_3">C. 20~50 years</string>
    <string name="Geothermal_Answer_Q2_4">D. Inexhaustible</string>
    <string name="Geothermal_Answer_Q3_1">A. Spinning turbine</string>
    <string name="Geothermal_Answer_Q3_2">B. Geothermal panel</string>
    <string name="Geothermal_Answer_Q3_3">C. Geothermal heat pump</string>
    <string name="Geothermal_Answer_Q3_4">D. Thermochemical feedstocks</string>
    <string name="Geothermal_Answer_Q4_1">A. Crust</string>
    <string name="Geothermal_Answer_Q4_2">B. Mantle</string>
    <string name="Geothermal_Answer_Q4_3">C. Outer core</string>
    <string name="Geothermal_Answer_Q4_4">D. Surface</string>
    <string name="Geothermal_Answer_Q5_1">A. Heat</string>
    <string name="Geothermal_Answer_Q5_2">B. Light</string>
    <string name="Geothermal_Answer_Q5_3">C. Chemical energy</string>
    <string name="Geothermal_Answer_Q5_4">D. Electricity</string>
    <string name="Geothermal_Answer_Q6_1">A. Solar energy</string>
    <string name="Geothermal_Answer_Q6_2">B. Firewood</string>
    <string name="Geothermal_Answer_Q6_3">C. Gas/Oil</string>
    <string name="Geothermal_Answer_Q6_4">D. Coal</string>
    <string name="Geothermal_Answer_Q7_1">A. 100~150°C</string>
    <string name="Geothermal_Answer_Q7_2">B. 70~100°C</string>
    <string name="Geothermal_Answer_Q7_3">C. 40~60°C</string>
    <string name="Geothermal_Answer_Q7_4">D. 160~180°C</string>
    <string name="Geothermal_Answer_Q8_1">A. 1852 AD</string>
    <string name="Geothermal_Answer_Q8_2">B. 3 BC</string>
    <string name="Geothermal_Answer_Q8_3">C. 256 AD</string>
    <string name="Geothermal_Answer_Q8_4">D. 1640 AD</string>
    <string name="Geothermal_Answer_Q9_1">A. People</string>
    <string name="Geothermal_Answer_Q9_2">B. Land</string>
    <string name="Geothermal_Answer_Q9_3">C. Earth</string>
    <string name="Geothermal_Answer_Q9_4">D. Heat</string>
    <string name="before_you_nbegin">Before You
        Begin</string>
    <string name="create_a_username_and_choose_an_navatar_to_begin">Create a username and choose an\navatar to begin!</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="enter_username">Enter Username</string>
    <string name="continuetext">CONTINUE →</string>
    <string name="choose_a_language">Choose a Language</string>
    <string name="please_choose_a_language_that_youprefer">Please choose a language that youprefer :)</string>
    <string name="korean">Korean(한국어)</string>
    <string name="english">English(영어)</string>
    <string name="continueText">CONTINUE →</string>
    <string name="choose_a_theme">Choose a Theme</string>
    <string name="the_theme_you_choose_will_be_the_main_topic_for_the_questions_you_ll_attempt">The theme you choose will be the main topic for the questions you
        will attempt!</string>
    <string name="solar">Solar</string>
    <string name="hydroelectric_nenergy">Hydroelectric Energy</string>
    <string name="wind_energy">Wind Energy</string>
    <string name="geothermal_nenergy">Geothermal Energy</string>
    <string name="your_results">Your Results</string>
    <string name="below_is_a_summary_of_how_you_performed">Below is a summary of how you performed!</string>
    <string name="result_point">result point</string>
    <string name="done">DONE →</string>
    <string name="ok">OK</string>
    <string name="purchase_failed">Purchase Failed</string>
    <string name="sorry_nyour_remaining_points_are_insufficient">Sorry
        Your remaining points are insufficient</string>
</resources>