<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <ImageView
        android:id="@+id/go_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_btn_style" />

    <TextView
        android:id="@+id/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="137dp"
        android:text="@string/your_results"
        android:textColor="@color/white"
        style="@style/Text.TitleStyle"/>

    <TextView
        android:id="@+id/SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MainText"
        android:layout_marginStart="17dp"
        android:layout_marginTop="5dp"
        android:text="@string/below_is_a_summary_of_how_you_performed"
        android:textColor="#CDCDCD"
        style="@style/Text.ContextStyle"/>


    <RelativeLayout
        android:id="@+id/bottom_page"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_page_style"
        android:animateLayoutChanges="true">

        <Button
            android:id="@+id/btn_chooseAvatar"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:enabled="false"
            android:background="@drawable/round_btn_style"
            android:backgroundTint="#CC507B00"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:text="@string/result_point" />

        <Button
            android:id="@+id/btn_done"
            style="@style/Text.TitleStyle"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn_chooseAvatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/oval_btn_color_style"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>



</RelativeLayout>