<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="137dp"
        android:text="@string/choose_a_language"
        android:textColor="@color/white"
        style="@style/Text.TitleStyle"/>

    <TextView
        android:id="@+id/SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MainText"
        android:layout_marginStart="17dp"
        android:layout_marginTop="5dp"
        android:text="@string/please_choose_a_language_that_youprefer"
        android:textColor="#CDCDCD"
        style="@style/Text.ContextStyle"/>

    <ImageView
        android:id="@+id/go_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_btn_style"
        />

    <RelativeLayout
        android:id="@+id/bottom_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SubText"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="70dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/bottom_page_style">


        <LinearLayout
            android:id="@+id/choose_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_chooseLanguage_Korean"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:background="@drawable/round_edge_btn_style"
                android:text="@string/korean"
                android:textAllCaps="false"
                android:textColor="@color/clickable_words"
                android:textColorHighlight="@color/clickable_words"
                android:textColorLink="@color/clickable_words" />


            <Button
                android:id="@+id/btn_chooseLanguage_English"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/round_edge_btn_style"
                android:text="@string/english"
                android:textAllCaps="false"
                android:textColor="@color/clickable_words"
                android:textColorHighlight="@color/clickable_words"
                android:textColorLink="@color/clickable_words" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_continue"
            style="@style/Text.TitleStyle"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_below="@+id/choose_language"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/oval_btn_style"
            android:enabled="false"
            android:text="@string/continueText"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>


</RelativeLayout>