<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/arrow"
        android:background="@drawable/round_btn_style"
        android:backgroundTint="@color/white" />


    <ImageView
        android:id="@+id/go_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="311dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_btn_style" />

    <TextView
        android:id="@+id/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="136dp"
        android:text="@string/choose_a_theme"
        android:textColor="@color/white"
        style="@style/Text.TitleStyle"/>

    <TextView
        android:id="@+id/SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MainText"
        android:layout_marginStart="27dp"
        android:layout_marginTop="3dp"
        android:text="@string/the_theme_you_choose_will_be_the_main_topic_for_the_questions_you_ll_attempt"
        android:textColor="#CDCDCD"
        style="@style/Text.ContextStyle"/>

    <RelativeLayout
        android:id="@+id/bottom_page"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_below="@+id/SubText"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="1dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/bottom_page_style">

        <Button
            android:id="@+id/Btn_solar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/round_edge_btn"
            android:drawableTop="@drawable/solar"
            android:text="@string/solar"
            android:textAllCaps="false"
            android:textColor="@color/clickable_words"
            android:textColorHighlight="@color/clickable_words"
            android:textColorLink="@color/clickable_words" />

        <Button
            android:id="@+id/Btn_hydroelectric"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="42dp"
            android:layout_toEndOf="@+id/Btn_solar"
            android:background="@drawable/round_edge_btn"
            android:drawableTop="@drawable/hydroelectric"
            android:text="@string/hydroelectric_nenergy"
            android:textAllCaps="false"
            android:textColor="@color/clickable_words"
            android:textColorHighlight="@color/clickable_words"
            android:textColorLink="@color/clickable_words" />

        <Button
            android:id="@+id/Btn_wind"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="226dp"
            android:background="@drawable/round_edge_btn"
            android:drawableTop="@drawable/wind"
            android:text="@string/wind_energy"
            android:textAllCaps="false"
            android:textColor="@color/clickable_words"
            android:textColorHighlight="@color/clickable_words"
            android:textColorLink="@color/clickable_words" />

        <Button
            android:id="@+id/Btn_geothermal"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="226dp"
            android:layout_toEndOf="@+id/Btn_wind"
            android:background="@drawable/round_edge_btn"
            android:drawableTop="@drawable/geothermal"
            android:text="@string/geothermal_nenergy"
            android:textAllCaps="false"
            android:textColor="@color/clickable_words"
            android:textColorHighlight="@color/clickable_words"
            android:textColorLink="@color/clickable_words" />
    </RelativeLayout>
</RelativeLayout>