<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.holdmyhand.energize.MainActivity">

    <TextView
        android:id="@+id/MainText"
        style="@style/Text.TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="135dp"
        android:text="@string/before_you_nbegin"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/SubText"
        style="@style/Text.ContextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_a_username_and_choose_an_navatar_to_begin"
        android:textColor="#CDCDCD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_page"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SubText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bottom_page_style"
        android:layout_marginTop="32dp">

        <ImageButton
            android:id="@+id/btn_chooseAvatar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:layout_constraintTop_toTopOf="@+id/bottom_page"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_btn_style"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/btn_chooseAvatar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/btn_chooseAvatar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btn_chooseAvatar"
            android:text="@string/choose_avatar" />

        <EditText
            android:id="@+id/editTxt_userName"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:background="@drawable/username_edittxt_style"
            android:hint="@string/enter_username"
            app:layout_constraintTop_toBottomOf="@+id/btn_chooseAvatar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/btn_continue"
            style="@style/Text.TitleStyle"
            android:layout_width="225dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTxt_userName"
            android:background="@drawable/oval_btn_style"
            android:clickable="false"
            android:layout_marginTop="20dp"
            android:text="@string/continuetext"
            android:textColor="@color/white"
            android:textSize="16sp"/>





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>